...
          ...lockedButton("Ngayon"),
        }}
      />
      <Tabs.Screen
        name="week"
        options={{
          title: "Linggo ko",
          tabBarIcon: ({ color, size }) => <Ionicons name="calendar" size={size} color={color} />,
          ...lockedButton("Linggo ko"),
        }}
      />
      <Tabs.Screen
        name="pantry"
...
          ...lockedButton("Pantry"),
        }}
      />
      <Tabs.Screen
        name="pay"
        options={{
          title: "Sahod ko",
          tabBarIcon: ({ color, size }) => <Ionicons name="card" size={size} color={color} />,
          ...lockedButton("Sahod ko"),
        }}
      />
      <Tabs.Screen
        name="record"
...
